syntax = "proto3";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";
import "ProjectService.proto";
option java_multiple_files = true;
option csharp_namespace = "GRPCMeetingClient";
package com.sep3yg9.njorddata.grpc.protobuf.meeting;

message CreatingMeeting{
  int32 assignedleader=1;
  string title=2;
  string description=3;
  com.sep3yg9.njorddata.grpc.protobuf.project.SpecificTime startdate=4;
  com.sep3yg9.njorddata.grpc.protobuf.project.SpecificTime enddate=5;
}

message UpdatingMeeting{
  int32 id=1;
  string title=2;
  string description=3;
  com.sep3yg9.njorddata.grpc.protobuf.project.SpecificTime startdate=4;
  com.sep3yg9.njorddata.grpc.protobuf.project.SpecificTime enddate=5;
}

message Meeting{
  int32 id=1;
  int32 assignedleader=2;
  string title=3;
  string description=4;
  com.sep3yg9.njorddata.grpc.protobuf.project.SpecificTime startdate=5;
  com.sep3yg9.njorddata.grpc.protobuf.project.SpecificTime enddate=6;
}

service MeetingService{
  rpc CreateMeeting(CreatingMeeting) returns (Meeting);
  rpc UpdateMeeting(UpdatingMeeting) returns (Meeting);
  rpc DeleteMeeting(google.protobuf.Int32Value) returns (google.protobuf.Empty);
  rpc GetById(google.protobuf.Int32Value) returns (Meeting);
}